# Data-Structure-and-Algorithms

./: .gitignore  a.out  test-OFSS
Codevita/: CriticalPlanets.cpp  DietPlan.cpp  PasteReduction.cpp  a.out
DP/: Abbrevation.cpp  MatrixChainMultiplication.cpp  UnboundedKnapsack.cpp  UnboundedKnapsackRecursive.cpp  a.out  knapsackRecursive.cpp  knapsackRecursiveMemorization.cpp  lcsRecursiveMemorization.cpp  subsetSumMemorization.cpp
GFG-PPC1/: FindImmediateSmallerThanX.cpp  FindTransitionPoint.cpp  FirstRepeatingElement.cpp  Subarraywithgivensum.cpp  TrappingRainWater.cpp  WaveArray.cpp  a.out
HackerEarth/: Minimumandmaximumdifferences.cpp
IITD-Practice/: efficientParcelDelivery.cpp  sweetDistribution.cpp
Interview Preparation Kit/: AlternatingCharacters.cpp  BalancedBrackets.cpp  FraudulentActivityNotifications.cpp  LargestRectangle.cpp  LuckBalance.cpp  MinimumAbsoluteDifferenceinanArray.cpp  Queues:ATaleofTwoStacks.cpp  SherlockandtheValidString.cpp  Sorting:Comparator.cpp  a.out
Kick Start/: Candies.cpp  LongestArithmetic.cpp  PerfectSubarray.cpp  a.out
MiniOrange/: 1.cpp  bstParentNode.cpp  linkedList.cpp  matrix.cpp
Old/: example.cpp
Practice (Data Structures and Algorithms)/: EvaluationofPostfixExpression.cpp  HeightofHeap.cpp  MailSystemDesign.cpp  PreordertoPostorder.cpp  SegregateEvenAndOddNodesInALinkedList.cpp  a.out  binarySearch.cpp
Practice_2025/: 2D_Array.cpp  MergeSortedArray.cpp  a.out  compare-the-triplets.cpp  simple-array-sum.cpp  solveMeFirst.cpp
Python/: return-or-raise.py
Sahaj/Sample/addition-cpp/: CMakeLists.txt
(+241 files in other folders)
